# energy-mlops-pipeline

./: .env.default  README.md  pyproject.toml
airflow/: docker-compose.yaml  pyproject.toml
app-api/: README.md  pyproject.toml
app-frontend/: README.md  pyproject.toml
app-monitoring/: README.md  pyproject.toml
batch-prediction-pipeline/: README.md  pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: predict.py  settings.py
feature-pipeline/: README.md  pyproject.toml
feature-pipeline/dags/: dag.py
feature-pipeline/feature_pipeline/: create_feature_view.py  run_feature_pipeline.py  settings.py  utils.py
feature-pipeline/feature_pipeline/etl/: extract.py  load.py  validation.py
training-pipeline/: README.md  pyproject.toml
training-pipeline/training_pipeline/: data.py  hyperparameter_tuning.py  models.py  settings.py  train.py  upload_best_model.py  utils.py
