[tool.poetry]
name = "energy-mlops-pipeline"
version = "0.1.0"
description = "MLOps pipeline to GCP"
authors = ["Hud Wahab <hudwahab@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "energy_mlops_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
