[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
