[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"
hopsworks = "^3.0.5"
fire = "^0.5.0"
yarl = "^1.9.2"
pandas = "^2.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
