[tool.poetry]
name = "training-pipeline"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hudwahab@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "training_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"
pyarrow = "^12.0.1"
category-encoders = "^2.6.1"
wandb = "^0.15.4"
matplotlib = "^3.7.1"
hopsworks = "^3.0.5"
python-dotenv = "^1.0.0"
lightgbm = "^3.3.5"
sktime = "^0.20.0"
seaborn = "^0.12.2"
fire = "^0.5.0"
jinja2 = "3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
